# training-cmake-basics

./: CMakeLists.txt  README.md
src/: main.cpp
src/myLib/: CMakeLists.txt
src/myLib/include/myLib/: myLib.h
src/myLib/src/: myLib.cpp
